scss/main.scss
*{
box-sizing: border-box;
}
html{
font-size: 10px;
scroll-behavior: smooth;
}
body{
padding: 0;
margin: 0;
font-size: 1.6rem;
font-family: 'Raleway', sans-serif;

}
.ul--normalize{
list-style: none;
margin: 0;
padding: 0;
}
a{
text-decoration: none;
}
.img{
width: 100%;
}
.container{
max-width: 1200px;
padding: 0 15px;
margin: 0 auto;
}
.header { 
   /*  position: fixed; */
   position: absolute;
width: 100%;
padding-top: 20px;

}

.opened{
    overflow: hidden;
}


.menu {
display: none;
transition:  all .3s ease-in-out;

@media screen and (max-width:992px) {
   display: block;  
   position: fixed; 
   top: 30px;
   left: 5px;
   width: 35px;
   height:35px;
   will-change: transform;
   border-radius: 50%;
   border: 1px solid rgba($color: #000000, $alpha: 0);
   z-index: 9;
   .opened &{
  
    border-color: rgba($color: #000000, $alpha: 1.0);
}
}

    &__item {
        @media screen and (max-width:992px) {
           position: absolute;
           width: 30px;
           height: 4px;
           background-color: #000;
           display: block;
           top: calc(50% - 2px);
           left: calc(50% - 15px);
           transition:  all .3s ease-in-out;

            &:nth-child(1){
                transform: translateY(-10px);
            }
            &:nth-child(3){
                transform: translateY(10px);
            }
            
                // animation 
            .opened &:nth-child(1){
                transform: translateY(0) rotate(-45deg);
            }
            .opened &:nth-child(3){
                transform: translateY(0) rotate(45deg);
            }
            .opened &:nth-child(2){
                transform: translateX(-30px);
                opacity: 0;
            }

         }
    }
}

.nav{

@media screen and (max-width:992px) {
 position: fixed;
 top: 0;
 left: 0;
 z-index: 8;
 background-color: #fff;
 transition: all .3s ease-in-out;
 transform: translateX(-100%);

 .opened & {
    transform: translateX(0); 
 }
}

 &__list{
    @media screen and (max-width:992px){
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: flex-start;
    padding:  15px 0 ;
   
    width: 100vw;
    height: 100vh;

} 
}

&__link{
    @media screen and (max-width:992px){
        display: block;
        width: 100%;
        line-height: 6rem;
        transition: all .3s ease-in-out;
      
        &:hover,
        &:focus{
            color: #96b92c;
            border-top: none !important;
        }
       }
}



}



.header__logo { 
margin: 0;
}

.nav__item { 
display: inline-block;
margin: 0 30px  0 0;
position: relative;
@media screen and (max-width:992px) {
  display: block;
  margin: 0;
  width: 100%;
  border-bottom: 1px solid rgba($color: #000000, $alpha: .6);
  padding-left: 30px;
  &:first-child{
    padding-left: 0;
   
  }
  &:first-child a {
   margin: 0 80px;
   padding-right:  150px;
    text-align: center;
   }
   &:not(:first-child)::after{
    content: '';
    position: absolute;
    top: 5.7px;
    left: 50%;
    transform: translate(-50%,-50%);
    width: 0;
    height: 0;
    border-width: 15px 15px 0 15px;
    border-color: #FFFFFF transparent transparent transparent;
    border-style: solid;
    filter: drop-shadow(0px 1px 0px rgba($color: #000000, $alpha: 1));

   }
   }

}
.nav__link { 
color: #262626;
font-weight: 600;
padding-top: 5px;
text-transform: uppercase;


}
.nav__link:hover,
.nav__link:focus,
.nav__link:active{
border-top:3px solid #ff6033 ;
transition: border .3s ease-out;
}



.section{
padding: 50px 0 50px;
}

.section--fresh-life,
.section--contact{
 
min-height: 100vh;
background-attachment: fixed;
}

.section--bg {
background-position: center;
background-repeat: no-repeat;
background-size: cover;

}
.section--blue{
    padding-top: 50px;
    background-color: #00c2c2;
}
.section--img{
object-fit: cover;
}
.section--subscribeToUs{
    padding: 150px 0;
    background-position: right;
}
.section--contact{
    padding-bottom: 0;
}
.row {
display: flex;
}
.row--justify-center{
justify-content: space-between;
align-items: center;
}
.row--centered{
padding-top: 120px;
justify-content: flex-start;
align-items: center;
min-height: 100vh;
}
.row--between-centered{
justify-content: space-between;
align-items: center;
}
.centered{
    @include flexElBeetween(center,nowrap)
}
.centered--start{
  justify-content: flex-start;
  align-items: center;
}
.row--between-wrap{
    @include flexElBeetween()
}
.row--between-nowrap{
    @include flexElBeetween(space-between,nowrap);
    
}
.row--space-around{
    @include flexElBeetween(space-around,nowrap);
}
.col {
width: 100%;
}
.col--1-3 {
max-width: 385px;  
}
.col--1-2{
    max-width: 330px;
    }
.col--1-8{
max-width: 520px;
}
.col--1-6{
max-width: 615px;
}
.col--flex-64{
   
    flex: 0 1 64%;
}
.col--flex-30{
   
    flex: 0 1 30.83%;
}
.col--flex-47{
   flex: 0 1 48%;
}
.col--1-5{
 max-width: 500px;
}

.article__title {
margin: 0;
font-size: 6rem;
font-weight: 900;
line-height: 1;
}
.article__text { 
padding: 25px 0;
font-weight: 300;
font-size: 1.7rem;
color: #262626;
line-height: 1.4;
}
.article__title--size{
    font-size: 9rem;
    @media screen and (max-width:420px){
        font-size: 6.5rem;
    }
}
.article--color-white{
color: #fff;
}

.btn {
text-transform: uppercase;
display: inline-block;
background-color: #ff6033;
box-shadow: 0 2px 5px rgba(0,0,0,.5);
font-size: 2rem;
font-weight: 300;
color: #fff;
line-height: 1;
padding: 20px 25px;
transition: all .3s ease-in-out;
border: 0;
outline: none;
cursor: pointer;
}
.btn--primary{
    background-color: #5585a2;
    padding: 1em 2.2em;
    &:hover{
        
        box-shadow: 0 6px 5px rgba(0,0,0,.5);
    }
}
.btn--secondary{
    background-color: #96b92c;
    padding: 1em 1.4em;
    &:hover{
       background-color: #fff; 
       color: #96b92c;
        
    }
}
.btn--blog{
    background-color: #f72b3b;
    padding: .9em 2.2em;
    &:hover{
        
        box-shadow: 0 6px 5px rgba(0,0,0,.5);
    }
}
.btn--rainbow:hover,
.btn--rainbow:focus,
.btn--rainbow:active{
 color: #ff6033;
 background-color: #fff;
}
.scroll-down{
text-align: center;  
}
.icon{
    &-scroll{
        width: 25px;
        height: 40px;
    }
  &-cart{
      height: 45px;
      width: 57px;
    
  }
    &-handground{
        width: 57px;
        height: 52px;
    }
    &-planet,
    &-carrot{
        width: 55px;
        height: 55px;
    }
}

.wrapper-img{
overflow: hidden;
}

.back-to-top{
    position: fixed;
    bottom: 30px;
    left: 25px;
    border-radius: 50%;
    transition: .3s ease-in;
    z-index: 25;
    opacity: 0;
    transform: scale(0);
    &--active {
        transform: scale(1);
        opacity: 1;
    }
    &:hover,
    &:focus{
        box-shadow: 0 6px 5px rgba(0,0,0,.5);
        background-color: #fff;
        color: #ff6033;
    }
    @media screen and (max-width:992px){
        left: 5px;
    }
    @media screen and (max-width:440px){
        
        bottom: 15px;
        padding: 15px 20px;
    }
}

